--- a/sample02/index.html
+++ b/sample02/index.html
@@ -36,6 +36,7 @@
       <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
       </a-animation>
     </a-sphere>
+    <a-text value="K&Fコンピュータサービス" position="0 0 0" align="center"></a-text>
   </a-marker>
 
   <!-- ⑥ カメラを追加 -->
